--- a/frontend/src/pages/SellerOnboardingPage.module.css
+++ b/frontend/src/pages/SellerOnboardingPage.module.css
@@ -4,6 +4,12 @@
   align-self: stretch;
 }
 
+.onboardingContainer {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
 .header {
   display: flex;
   flex-direction: column;
